Updates to underscore.js

--- a/underscore-js/SpecRunner.html
+++ b/underscore-js/SpecRunner.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Reunderscore Test Suite</title>
+    <title>Underscore.js Test Suite</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="lib/css/mocha.css" />
     <script src="lib/chai.js"></script>
     <script src="lib/mocha.js"></script>
-    <script src="lib/sinon.js"></script>
-    <script src="lib/sinon-chai.js"></script>
     <script src="lib/testSupport.js"></script>
 
     <!-- Source files -->
